--- a/styles/main.css
+++ b/styles/main.css
@@ -142,7 +142,7 @@ h2,
     height: 14.425rem;
   }
 }
-@media (min-width: 90rem) {
+@media (min-width: 120rem) {
   .carousel__container .card {
     width: 17rem;
     height: 17rem;
@@ -338,6 +338,30 @@ h2,
   gap: 0.875rem;
 }
 
+.header__nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.header__nav .search-word {
+  height: 2.5rem;
+  width: 12.5rem;
+  border: 1px solid #ababab;
+  border-radius: 0.9375rem;
+  padding-left: 1rem;
+  font-family: "Comfortaa", cursive;
+  font-size: 0.75rem;
+}
+.header__nav .search-word::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+@media (min-width: 48rem) {
+  .header__nav .search-word {
+    height: 3rem;
+    width: 15.5rem;
+    font-size: 0.875rem;
+  }
+}
 @media (min-width: 48rem) {
   .header__nav img {
     max-width: 1.3125rem;
@@ -358,6 +382,15 @@ h2,
 @media (min-width: 90rem) {
   .header__nav img {
     width: 2.3125rem;
+  }
+}
+
+@media (min-width: 64rem) {
+  .main__nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
   }
 }
 
@@ -385,7 +418,7 @@ h2,
     height: 0.9225rem;
   }
 }
-@media (min-width: 85.375rem) {
+@media (min-width: 64rem) {
   .nav__container .btn__nav_expand img {
     display: none;
   }
@@ -406,6 +439,12 @@ h2,
   width: 12.5rem;
   border: 1px solid #ababab;
   border-radius: 0.9375rem;
+  padding-left: 0.6875rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1.5rem;
+  overflow: hidden;
 }
 @media (min-width: 48rem) {
   .letter__container .letters {
@@ -417,6 +456,30 @@ h2,
   .letter__container .letters {
     height: 2.5rem;
     width: 44.375rem;
+    gap: 0;
+    justify-content: space-evenly;
+    padding-right: 0.6875rem;
+  }
+}
+.letter__container .letters .letter {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "Comfortaa", cursive;
+  font-size: 1.35rem;
+  line-height: 1.5rem;
+  font-weight: 700;
+  color: #ff7800;
+}
+@media (min-width: 48rem) {
+  .letter__container .letters .letter {
+    font-size: 1.375rem;
+    line-height: 1.6875rem;
+  }
+}
+@media (min-width: 85.375rem) {
+  .letter__container .letters .letter {
+    font-size: 1.125rem;
+    line-height: 1.375rem;
   }
 }
 .letter__container .btn__search_letter {
@@ -467,10 +530,26 @@ h2,
   padding-top: 7.5rem;
   padding-bottom: 2.5rem;
 }
+@media (min-width: 64rem) {
+  .drop-menu__container {
+    position: unset;
+    background: transparent;
+    width: auto;
+    height: auto;
+    padding: 0;
+    padding-bottom: 1rem;
+  }
+}
 .drop-menu__container .remove__menu {
   position: relative;
   left: 80%;
   padding-bottom: 1rem;
+  padding-bottom: 2.5rem;
+}
+@media (min-width: 64rem) {
+  .drop-menu__container .remove__menu {
+    display: none;
+  }
 }
 .drop-menu__container .links {
   list-style: none;
@@ -479,6 +558,12 @@ h2,
   align-items: center;
   gap: 2.5rem;
 }
+@media (min-width: 64rem) {
+  .drop-menu__container .links {
+    flex-direction: row;
+    gap: 1rem;
+  }
+}
 .drop-menu__container .link {
   font-family: "Comfortaa", cursive;
   font-weight: 400;
@@ -486,6 +571,24 @@ h2,
   line-height: 1.063rem;
   color: #666666;
   text-decoration: none;
+}
+@media (min-width: 64rem) {
+  .drop-menu__container .link {
+    font-size: 1rem;
+    line-height: 1.1875rem;
+  }
+}
+@media (min-width: 90rem) {
+  .drop-menu__container .link {
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+  }
+}
+@media (min-width: 120rem) {
+  .drop-menu__container .link {
+    font-size: 1.375rem;
+    line-height: 1.6875rem;
+  }
 }
 .drop-menu__container .link:hover {
   color: #ff7800;
