--- a/styles/_suggest.scss
+++ b/styles/_suggest.scss
@@ -15,3 +15,55 @@
     margin-top: 3.5rem;
   }
 }
+
+.suggest-word__circle {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background: $clr--light;
+  border: 3px solid $clr--accent;
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  z-index: 1000;
+  @media (min-width: 48rem) {
+    width: 4.6875rem;
+    height: 4.6875rem;
+  }
+  @media (min-width: 85.375rem) {
+    width: 5.9375rem;
+    height: 5.9375rem;
+  }
+  @media (min-width: 90rem) {
+    width: 9.8125rem;
+    height: 9.8125rem;
+  }
+  .suggest__link {
+    text-decoration: none;
+    position: relative;
+    top: 35%;
+    & p {
+      font-family: $font-primary;
+      font-weight: 400;
+      font-size: 0.5625rem;
+      line-height: 0.6875rem;
+      text-align: center;
+      color: $clr--black;
+      @media (min-width: 48rem) {
+        font-size: 0.625rem;
+        line-height: 0.75rem;
+        font-weight: 700;
+      }
+      @media (min-width: 85.375rem) {
+        font-size: 0.75rem;
+        line-height: 0.9375rem;
+        font-weight: 700;
+      }
+      @media (min-width: 90rem) {
+        font-size: 1.25rem;
+        line-height: 1.5rem;
+        font-weight: 700;
+      }
+    }
+  }
+}
