--- a/styles/abstracts/_config.scss
+++ b/styles/abstracts/_config.scss
@@ -2,6 +2,7 @@
 $clr--white: #f5f5f5;
 $clr--light: #fafafa;
 $clr--gray: #ababab;
+$clr-gray-medium: #e6e6e6;
 $clr--gray-dark: #666666;
 $clr--black: #2d2d2d;
 $clr--accent: #ff7800;
@@ -10,7 +11,6 @@ $clr--accent-2: #ffb769;
 $clr--accent-3: #ffe3c5;
 
 // FONTS
-
 $font-primary: "Comfortaa", cursive;
 $font-secondary: "Roboto", sans-serif;
 
