--- a/styles/abstracts/_config.scss
+++ b/styles/abstracts/_config.scss
@@ -106,6 +106,8 @@ h2,
   font-size: 0.875rem;
   line-height: 1.0625rem;
 
+  cursor: pointer;
+
   @media (min-width: 48rem) {
     font-size: 1rem;
   }
