--- a/styles/main.css
+++ b/styles/main.css
@@ -94,6 +94,7 @@ h2,
   font-weight: 400;
   font-size: 0.875rem;
   line-height: 1.0625rem;
+  cursor: pointer;
 }
 @media (min-width: 48rem) {
   .btn {
@@ -259,11 +260,6 @@ h2,
 @media (min-width: 48rem) {
   .carousel__container .dot__container {
     transform: scale(2);
-  }
-}
-@media (min-width: 85.375rem) {
-  .carousel__container .dot__container {
-    display: none;
   }
 }
 .carousel__container .dot {
@@ -522,7 +518,7 @@ h2,
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 1000;
+  z-index: 10000;
   background: #fafafa;
   min-width: 11.6875rem;
   height: -webkit-fit-content;
@@ -848,6 +844,11 @@ h2,
     margin-bottom: 1.5rem;
   }
 }
+@media (min-width: 90rem) {
+  .frequently__section .dot__container {
+    display: none;
+  }
+}
 
 .title__align {
   display: flex;
@@ -1085,10 +1086,19 @@ body.dark .hero__section .hero__subheader {
 body.dark .hero__section .socials__container img {
   filter: none;
 }
-body.dark .carousel__card_container .card__words {
+body.dark .letter__header_container .num-of__words {
+  color: #e6e6e6;
+}
+body.dark .suggest-word__circle {
+  background: #2d2d2d;
+}
+body.dark .suggest-word__circle .suggest__link p {
+  color: #e6e6e6;
+}
+body.dark .carousel__container .card__words {
   background: #fafafa;
   color: #2d2d2d;
 }
-body.dark .carousel__card_container .card__words .serbian__word {
+body.dark .carousel__container .card__words .serbian__word {
   color: #2d2d2d;
 }/*# sourceMappingURL=main.css.map */
