SLIDER & LETTER SELECTION

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -73,6 +73,7 @@
       line-height: 1.5rem;
       font-weight: 700;
       color: $clr--accent;
+      cursor: pointer !important;
       @media (min-width: 48rem) {
         font-size: 1.375rem;
         line-height: 1.6875rem;
