--- a/styles/abstracts/_carousell.scss
+++ b/styles/abstracts/_carousell.scss
@@ -3,16 +3,22 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1.5rem;
+  // overflow: hidden;
   margin-bottom: 1.125rem;
   @media (min-width: 48rem) {
     margin: 0;
   }
   .carousel__card_container {
+    overflow-x: scroll;
+    overflow-y: hidden;
     display: flex;
     flex-direction: row;
     gap: 1.5rem;
-    overflow: hidden;
     max-width: 100%;
+  }
+  ::-webkit-scrollbar {
+    width: 0px;
+    background-color: transparent;
   }
 
   .card {
