--- a/styles/main.css
+++ b/styles/main.css
@@ -106,6 +106,10 @@ h2,
   display: none;
 }
 
+.underline {
+  border-bottom: 2px solid #666666 !important;
+}
+
 .carousel__container {
   display: flex;
   flex-direction: column;
@@ -119,11 +123,16 @@ h2,
   }
 }
 .carousel__container .carousel__card_container {
+  overflow-x: scroll;
+  overflow-y: hidden;
   display: flex;
   flex-direction: row;
   gap: 1.5rem;
-  overflow: hidden;
   max-width: 100%;
+}
+.carousel__container ::-webkit-scrollbar {
+  width: 0px;
+  background-color: transparent;
 }
 .carousel__container .card {
   background: #ffe3c5;
@@ -465,6 +474,7 @@ h2,
   line-height: 1.5rem;
   font-weight: 700;
   color: #ff7800;
+  cursor: pointer !important;
 }
 @media (min-width: 48rem) {
   .letter__container .letters .letter {
